@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -904,8 +904,7 @@ public abstract class AbstractCorrelatingMessageHandler extends AbstractMessageP
 			this.logger.debug(() -> "Completing group with correlationKey [" + correlationKey + "]");
 
 			result = this.outputProcessor.processMessageGroup(group);
-			if (result instanceof Collection<?>) {
-				verifyResultCollectionConsistsOfMessages((Collection<?>) result);
+			if (isResultCollectionOfMessages(result)) {
 				partialSequence = (Collection<Message<?>>) result;
 			}
 
@@ -944,10 +943,24 @@ public abstract class AbstractCorrelatingMessageHandler extends AbstractMessageP
 
 	}
 
+	/**
+	 * Probably the method is {@code protected} by mistake.
+	 * @param elements the group processor result.
+	 * @deprecated without replacement - out of use from now on.
+	 */
+	@Deprecated(since = "6.5", forRemoval = true)
 	protected void verifyResultCollectionConsistsOfMessages(Collection<?> elements) {
 		Class<?> commonElementType = CollectionUtils.findCommonElementType(elements);
 		Assert.isAssignable(Message.class, commonElementType, () ->
 				"The expected collection of Messages contains non-Message element: " + commonElementType);
+	}
+
+	private static boolean isResultCollectionOfMessages(Object result) {
+		if (result instanceof Collection<?> resultCollection) {
+			Class<?> commonElementType = CollectionUtils.findCommonElementType(resultCollection);
+			return commonElementType != null && Message.class.isAssignableFrom(commonElementType);
+		}
+		return false;
 	}
 
 	protected Object obtainGroupTimeout(MessageGroup group) {
